Fixed Window Overflow

--- a/discorddark.css
+++ b/discorddark.css
@@ -844,7 +844,7 @@ button.bd-addon-button:not(.bd-link):not(.bd-button-danger):hover, .bd-view-butt
 
 .base-2jDfDU {
   top: 0px;
-  height: 101vh;
+  height: 100vh;
 }
 
 .platform-win .closeButton-30b1gR {
